--- a/PacMan/PacMan.csproj
+++ b/PacMan/PacMan.csproj
@@ -68,6 +68,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="bin\Debug\PacMan.exe.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -92,6 +93,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\pacman_anim_3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="bin\Debug\PacMan.exe" />
+    <Content Include="bin\Debug\PacMan.pdb" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
