--- a/WPFDynamicTab/WPFDynamicTab.csproj
+++ b/WPFDynamicTab/WPFDynamicTab.csproj
@@ -93,6 +93,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="bin\Debug\WPFDynamicTab.vshost.exe.manifest" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -101,6 +102,10 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="delete.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="bin\Debug\WPFDynamicTab.exe" />
+    <Content Include="bin\Debug\WPFDynamicTab.pdb" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
